fix logo too big

--- a/css/page1-styles.css
+++ b/css/page1-styles.css
@@ -17,7 +17,8 @@ header{
 #logo{
     margin-right: 20px;
     width:120px;
-    height:99px;
+    height:40px;
+    margin-top: 30px;
 }
 
 .dropbtn {
@@ -93,3 +94,4 @@ footer {
     justify-content: space-evenly;
     color: beige
 }
+
